# taxi_demand_predictor

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: feature_pipeline.yaml  feature_pipeline.yml  inference_pipeline.yml  training_pipeline.yml
data/transformed/: ts_data_2022_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transformed_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature_engineering.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb  pipeline_tutorial.ipynb
scripts/: backfill_feature_group.py  backfill_inference.py  feature_pipeline.py  inference_pipeline.py  training_pipeline.py
src/: config.py  data.py  data_split.py  feature_store_api.py  frontend.py  frontend_monitoring.py  inference.py  model_registry_api.py  monitoring.py  paths.py  plot.py
yields/wheat/: yield_1981.nc4  yield_1982.nc4  yield_1983.nc4  yield_1984.nc4  yield_1985.nc4  yield_1986.nc4  yield_1987.nc4  yield_1988.nc4  yield_1989.nc4  yield_1990.nc4  yield_1991.nc4  yield_1992.nc4  yield_1993.nc4  yield_1994.nc4  yield_1995.nc4  yield_1996.nc4  yield_1997.nc4  yield_1998.nc4  yield_1999.nc4  yield_2000.nc4  yield_2001.nc4  yield_2002.nc4  yield_2003.nc4  yield_2004.nc4  yield_2005.nc4  yield_2006.nc4  (+10 more)
(+50 files in other folders)
